--- a/Aplikace_rehabilitace/app/src/main/res/values/strings.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="jdeme_na_to">Jdeme na to!</string>
     <string name="vypl_te_as">Vyplňte čas</string>
     <string name="_00_00">00:00</string>
+    <string name="vyberte_preferovan_as_cvi_en">Vyberte preferovaný čas cvičení</string>
 </resources>
