UI almost completed

--- a/Aplikace_rehabilitace/app/src/main/res/values/strings.xml
+++ b/Aplikace_rehabilitace/app/src/main/res/values/strings.xml
@@ -49,4 +49,28 @@
     <string name="nasn_mejte_prov_d_n_reflexu_na_obou_stran_ch_reflex_prob_h_n_kdy_rozd_ln_as_sn_m_n_v_m_op_t_zm_me">Nasnímejte provádění reflexu na obou stranách, reflex probíhá někdy rozdílně. Čas snímání Vám opět změříme.</string>
     <string name="vyzkum_zahajen">Výzkum zahájen</string>
     <string name="skaceme_do_toho_rovn_ma_nohama">Skáčeme do toho rovnýma nohama!</string>
+    <string name="video_bylo_uspesne_vytvoreno">Video bylo úspěšně vytvořeno!</string>
+    <string name="vase_nahran_data_pom_ou_dal_m_pacient_m">Vaše nahraná data pomůžou dalším pacientům</string>
+    <string name="pokracovat_ve_cvi_en">Pokračovat ve cvičení</string>
+    <string name="video_nebylo_korektn_nahr_no">Video nebylo korektně nahráno!</string>
+    <string name="prosime_nahrajte_video_znovu">Prosíme, nahrajte video znovu. Soustřeďte se na udržení postavy v záběru.</string>
+    <string name="znovu_nahrat_video">Znovu nahrát video</string>
+    <string name="vyberte_pr_vod_terapi">Vyberte průvod terapií, kde vám ukážame, jak pacienta pro cvičení připravit, nebo do toho můžeme skočit rovnýma nohama</string>
+    <string name="ukazat_pripravu">Ukázat přípravu</string>
+    <string name="_1_4_poloh">1/4 poloh / 5 minut (20 minut celkem) \n Stimulace zón záhlavní a čelistní</string>
+    <string name="pritlak_provadejte">Přítlak provádějte pod bradou a na spodní straně týlu hlavy</string>
+    <string name="zmente_polohu">Změňte polohu</string>
+    <string name="zmenit_polohu">Změnit polohu</string>
+    <string name="uspesne_jste_dokoncili_cviceni">Úspěšně jste dokončili cvičení</string>
+    <string name="cvicen_v_poradku">Cvičení v pořádku</string>
+    <string name="dalsi_planovan_cviceni">Další plánovaná cvičení</string>
+    <string name="zprava_o_cviceni">Zpráva o cvičení</string>
+    <string name="doplnte_informace_o_cvi_en">Doplňte informace o cvičení</string>
+    <string name="uspesne_jste_dokoncili_cviceni_long_message">Úspěšně jste dokončili cvičení, pokud byl ve cvičení nějaký problém, cokoli co je důležité zaznamenat udělejte to zde, abychom to mohli vzít v úvahu při dalším plánování terapie.</string>
+    <string name="zaznamenat">Zaznamenat</string>
+    <string name="terapii_d_l_te_skv_le">Terapii děláte skvěle!</string>
+    <string name="_30_dn_pravideln_ho_cvi_en">30 dní pravidelného cvičení</string>
+    <string name="zahajit_cviceni">Zahájit cvičení</string>
+    <string name="proveden_cvi_en">Provedená cvičení</string>
+    <string name="planovan_cvi_en">Plánovaná cvičení</string>
 </resources>
